# wiscanet-source

./: .clang-format  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DevNotes.md  README.md  UXnotes.md  UserExperience.md
doc/: Doxyfile
src/: CMakeLists.txt  Makefile  _cproject.xml  _project.xml  verStr.h
src/cnode/: CMakeLists.txt  Makefile  cnode  cnode.cpp  install_log  main.cpp  sysconf.h  verStr.h
src/cnode/src/: Makefile  verStr.h
src/enode/: CMakeLists.txt  Makefile  enode  enode.cpp  enode.mk  uControl  uControl.cpp  uControl.cpp.new  uControl.mk  verStr.h
src/enode/mat/: CMakeLists.txt  Makefile  buffer_read.m  gradio_mex.c  gradio_mex.mexa64  local_usrp.m  local_usrp_lib.m  local_usrp_mex.c  local_usrp_mex.mexa64  mtest.m  ulib.m
src/enode/python/: CMakeLists.txt  local_usrp.py  pytest.py
src/enode/src/: Makefile  cnfParse.cpp  cnfParse.h  enode.cpp  enode.mk  uControl.cpp  uControl.mk  verStr.h
src/enode/tools/: Makefile  matkill
src/hdr/: msgdef.h
src/include/: cnfParse.h  msgdef.h  sysconf.h
src/lib/mongoose-6.0/examples/json_rpc_server/: json_rpc_server
src/lib/mongoose-6.0/examples/settings_panel_for_a_device/: settings_panel  settings_panel.c
src/lib/mongoose-6.0/examples/simplest_web_server/: Makefile
src/lib/tinyxml/: _xmltest.cpp.swp  xmltest
src/shared/: cnfParse.cpp
tools/: appkill  matkill  monitor  test_multi.m  test_multi.py  uconkill
tools/grc/: sdrn_monitor_b210.grc  sdrn_monitor_x310.grc
tools/in_progress/: local_usrp_mock.m
tools/install/: genMatInst  ipList  matInst  pInstall  testSuits
tools/install/users/: gerardInst  hanInst  pInstall  richInst  richInstTest  wiscaInst  x310Inst
tools/security/gerard/: config  tIdRsa
tools/security/han/: config  secSetup  sshTest  tIdRsa
tools/security/richard/: config  genIdRsaPub  secSetup  tIdRsa
tools/security/wisca/: config  secSetup  sshTest
tools/security/wisca_x310/: config
tools/tests/: test_multi.m  test_multi.py
umat/cfg/: usrconfig_10.206.201.116.xml  usrconfig_10.206.201.85.xml
umat/mat/TDMA_bpsk/bpsk_lib/: bpsk_channel.m  bpsk_constellation.m  bpsk_frame_detection.m  bpsk_frame_synch.m  bpsk_freq_offset_comp.m  bpsk_rx.m  bpsk_rx_err.m  bpsk_tx.m  bpsk_tx_chain.m
umat/mat/TDMA_bpsk/demo1/: README  rx1.m  rxlog1.m  rxlog1_fft.m  tx1.m
umat/mat/TDMA_bpsk/demo2/: README  rx2.m  tx2.m  txlog2.m
umat/mat/TDMA_bpsk/demo3/: README  relay.m  rx3.m  tx3.m
umat/mat/TDMA_sin/: rx_dump.m  rx_sin_log.m  tx_sin.m
umat/mat/UMAC_sin/: rx_log.m  rx_sine.m  tx_sine.m
umat/tools/cli/: uInstall
umat/tools/gui/src/: Makefile  matInst  msgdef.h  sysconfig.xml  ui_srv.c  ui_srv.h
umat/tools/gui/src/mongoose-6.0/examples/restful_server/: restful_server
umat/tools/gui/src/mongoose-6.0/examples/settings_panel_for_a_device/web_root/: index.shtml
umat/tools/gui/src/mongoose-6.0/examples/simplest_web_server/: ARM-WSERVER
umat/tools/gui/src/web_root/: index.shtml  network_config.html
